# Chatbot

./: .env.example  .gitignore  .replit  README.md  docker-compose.yml  pyproject.toml  replit.md  requirements.txt  start.bat
app/: auth.py  config.py  db.py  history.py  llm.py  main.py  manage.py  schema.py  sql_agent.py  sql_validator.py
app/static/: index.html
graphify-out/: .graphify_python  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
tests/: test_sql_validator.py
